--- a/css/student_css/bootstrap_studNav.css
+++ b/css/student_css/bootstrap_studNav.css
@@ -15,6 +15,7 @@ html {
 body {
   margin: 0;
   background-image: url("../../img/studentBG.png");
+  background-attachment: fixed;
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
