--- a/css/admin_css/bootstrap_navAdmin.css
+++ b/css/admin_css/bootstrap_navAdmin.css
@@ -2683,7 +2683,7 @@ th {
     margin-bottom: 15px;
     overflow-y: hidden;
     -ms-overflow-style: -ms-autohiding-scrollbar;
-    border: 1px solid #ddd;
+    border: none;
   }
   .table-responsive>.table {
     margin-bottom: 0;
