--- a/css/student_css/user_Cand.css
+++ b/css/student_css/user_Cand.css
@@ -19,6 +19,7 @@
   height: 100%;
   float: left;
   display: flex;
+  margin-top: -8px;
 }
 
 table.center {
@@ -98,7 +99,8 @@ table.center {
     .Uright{
     overflow-y: scroll;
     height: 350px;
-    margin-left: 0 !important;
+    margin-left: 6px !important;
+    margin-top: 5px;
     }
     #scrollToTopBtn{
     display: none;
@@ -121,7 +123,8 @@ table.center {
     .Uright{
     overflow-y: scroll;
     height: 350px;
-    margin-left: 0 !important;
+    margin-left: 6px !important;
+    margin-top: 5px;
     }
     #scrollToTopBtn{
     display: none;
@@ -200,6 +203,7 @@ table.center {
     overflow-y: scroll;
     width: 580px;
     margin-left: 10px !important;
+    margin-top: 5px;
     }
     #scrollToTopBtn{
     display: none;
@@ -223,6 +227,8 @@ table.center {
     overflow-y: scroll;
     width: 580px;
     margin-left: 10px !important;
+    overflow-y: hidden;
+    margin-top: 5px;
     }
     #scrollToTopBtn{
     display: none;
@@ -326,7 +332,7 @@ aside p.Aelec-guide-txt {
     text-align: center;
     font-family: 'Roboto-regular', sans-serif;
     letter-spacing: 6px;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 
 footer {
@@ -396,8 +402,8 @@ footer {
 
 
 #profile p {
-  font-size: 14px;
-  font-family: 'roboto-regular', sans-serif;
+  font-size: 18px;
+  font-family: 'roboto-regular',sans-serif;
 }
 
 #profile button {
@@ -537,4 +543,3 @@ footer {
     font-size: 15px;
     text-align: justify;
 }
-
