Revert "Files from Webhost"
This reverts commit bbbabd6a131a7c440eeb706f17deca6652820e76.

--- a/css/admin_css/style_accessLogs.css
+++ b/css/admin_css/style_accessLogs.css
@@ -8,10 +8,6 @@ body {
 }
 /*Datatable*/
 
-.table-responsive{
-    border: none;
-}
-
 .container {
   width: 100%;
   position: relative !important;
@@ -91,7 +87,7 @@ tr:hover {
   letter-spacing: 6px;
 }
 
-.aHeader-txt {
+h2.aHeader-txt {
   color: rgb(255, 196, 35);
   font-size: 24px;
   margin-top: .5%;
