--- a/css/student_css/vote_ballot.css
+++ b/css/student_css/vote_ballot.css
@@ -265,7 +265,7 @@ img.candidate-photo {
   /* Stay in place */
   z-index: 1000;
   /* Sit on top */
-  padding-top: 100px;
+  padding-top: 5%;
   /* Location of the box */
   left: 0;
   right: 0;
